# deal-scraper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  config.yaml  docker-compose.yml  handoff.md  pyproject.toml
.claude/skills/deal-scraper/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  scraper.yml
agents/: alert_agent.py  scraper_agent.yaml
agents/hooks/: pre_compact.py  session_start.py  session_stop.py
backend/: config.py  dependencies.py  exceptions.py  main.py  sanitize.py  security.py
backend/api/routes/: alerts.py  auth.py  cars.py  health.py  outliers.py  stats.py
backend/db/: models.py  session.py
backend/db/crud/: alerts.py  cars.py  outliers.py  users.py
backend/middleware/: logging.py
backend/schemas/: alert.py  auth.py  car.py  outlier.py  stats.py
data/: feedback.json
engine/: outlier.py  stats.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_indexes.py  003_add_vehicle_details.py  003_enable_rls.py  004_rls_scoped_policies.py  005_alert_min_discount.py  006_enrich_and_listing_type.py  007_add_vehicle_specs.py  008_add_quality_tier.py  009_add_image_url.py  010_add_users_and_ownership.py  011_add_missing_indexes.py
nginx/: nginx.conf
notifications/: email.py  push_stub.py
scraper/: filters.py  main.py  retry.py
scraper/sources/: auksjonen.py  finn.py  nettbil.py
tests/: test_api_health.py  test_outlier_engine.py
(+16 files in other folders)
