[project]
name = "deal-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "playwright>=1.45",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.13",
    "aiosmtplib>=3.0",
    "psycopg2-binary>=2.9",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["backend", "scraper", "ai", "engine", "notifications", "agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
